--- a/RazorClassLibrary/Components/Layout/NavMenu.razor
+++ b/RazorClassLibrary/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">ChatAI.Web</a>
+        <a class="navbar-brand" href="">ChatAI</a>
     </div>
 </div>
 
