Remove unused files and update imports

--- a/ChatAI.MAUI/Components/_Imports.razor
+++ b/ChatAI.MAUI/Components/_Imports.razor
@@ -6,4 +6,4 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using ChatAI.MAUI
-@using ChatAI.MAUI.Components
+@using RazorClassLibrary.Components
