--- a/ChatAI.MAUI/MainPage.xaml
+++ b/ChatAI.MAUI/MainPage.xaml
@@ -2,12 +2,13 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:ChatAI.MAUI"
+             xmlns:Components="clr-namespace:RazorClassLibrary.Components;assembly=RazorClassLibrary"
              x:Class="ChatAI.MAUI.MainPage"
              BackgroundColor="{DynamicResource PageBackgroundColor}">
 
     <BlazorWebView x:Name="blazorWebView" HostPage="wwwroot/index.html">
         <BlazorWebView.RootComponents>
-            <RootComponent Selector="#app" ComponentType="{x:Type local:Components.Routes}" />
+            <RootComponent Selector="#app" ComponentType="{x:Type Components:Routes}" />
         </BlazorWebView.RootComponents>
     </BlazorWebView>
 
