Update favicon paths in index.html and App.razor

--- a/ChatAI.Web/Components/App.razor
+++ b/ChatAI.Web/Components/App.razor
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="_content/RazorClassLibrary/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="ChatAI.Web.styles.css" />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="_content/RazorClassLibrary/favicon.png" />
     <HeadOutlet />
 </head>
 
