Update render mode in App and Counter components

--- a/ChatAI.Web/Components/App.razor
+++ b/ChatAI.Web/Components/App.razor
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="ChatAI.Web.styles.css" />
     <link rel="icon" type="image/png" href="_content/RazorClassLibrary/favicon.png" />
-    <HeadOutlet />
+    <HeadOutlet @rendermode="InteractiveServer" />
 </head>
 
 <body>
-    <Routes />
+    <Routes @rendermode="InteractiveServer" />
     <script src="_framework/blazor.web.js"></script>
 </body>
 
